flex layout of login page

--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
         <input type="hidden" name="redirectUrl" value="/">
         <div class="login_input">
           <label for="login_id">ID</label>
-          <input type="text" id="login_id" name="login_id" placeholder="ID">
+          <input type="text" id="login_id" name="login_id" >
         </div>
         <div class="login_input">
           <label for="login_pw">Passward</label>
-          <input type="password" id="login_pw" name="login_pw" placeholder="Password">
+          <input type="password" id="login_pw" name="login_pw">
         </div>
         <button type="submit"> Login </button>
       </form>
