--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>Movie Reservation</title>
   <link rel="stylesheet" href="index.css">
+  <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
   <meta charset="utf-8" />
 </head>
 <body>
@@ -24,11 +25,11 @@
       <form method="post" class="login_form" action="/">
         <input type="hidden" name="redirectUrl" value="/">
         <div class="login_input">
-          <label for="login_id">ID</label>
+          <label for="login_id"><i class="fas fa-user"></i></label>
           <input type="text" id="login_id" name="login_id" >
         </div>
         <div class="login_input">
-          <label for="login_pw">Passward</label>
+          <label for="login_pw"><i class="fas fa-key"></i></label>
           <input type="password" id="login_pw" name="login_pw">
         </div>
         <button type="submit"> Login </button>
