adjust icon size and make icon label

--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
       <form method="post" class="login_form" action="/">
         <input type="hidden" name="redirectUrl" value="/">
         <div class="login_input">
-          <label for="login_id"><i class="fas fa-user"></i></label>
+          <label for="login_id"><span><i class="fas fa-user fa-fw"></i></span></label>
           <input type="text" id="login_id" name="login_id" >
         </div>
         <div class="login_input">
-          <label for="login_pw"><i class="fas fa-key"></i></label>
+          <label for="login_pw"><span><i class="fas fa-key fa-fw"></span></i></label>
           <input type="password" id="login_pw" name="login_pw">
         </div>
         <button type="submit"> Login </button>
