--- a/index.html
+++ b/index.html
@@ -32,8 +32,10 @@
           <label for="login_pw"><span><i class="fas fa-key fa-fw"></span></i></label>
           <input type="password" id="login_pw" name="login_pw">
         </div>
-        <button type="submit"> Login </button>
+        <button type="submit"> Sign in </button>   
+        <button> Sign up </button>    
       </form>
+        
     </div>
     <!-- /Body -->
 
