Add movie reservation box (html + css)

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Movie Reservation</title>
+  <title>Movie Reservation-Login</title>
   <link rel="stylesheet" href="index.css">
   <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
   <script src="./index.js"></script>
