--- a/reservation.html
+++ b/reservation.html
@@ -1,1 +1,41 @@
-Reservation
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Movie Reservation</title>
+  <link rel="stylesheet" href="reservation.css">
+  <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
+  <script src="./reservation.js"></script>
+  <meta charset="utf-8" />
+</head>
+<body>
+
+    <!-- Header -->
+    <div class="header">
+      <!-- 서비스 메뉴 -->
+      <div class="header_menu">
+        <h1>T I C K E T</h1>
+      </div>
+      <!-- /서비스 메뉴 -->
+    </div>
+    <!-- /Header -->
+
+
+    <!-- Body -->
+    <div class="container">
+      <!-- Movie -->
+      <div class = "movie_container">
+        <div class ="movie_header">
+            <span class="reserv_title">영화</span>
+        </div>
+        <div class="movie_contents">
+            <div class="reserv_title_back"> </div>
+            <div id = "movie_contents_list"> Text</div>
+        </div>
+      </div>
+      <!-- /Movie --> 
+    </div>
+    <!-- /Body -->
+
+  
+</body>
+</html>
