add list in movie select box

--- a/reservation.html
+++ b/reservation.html
@@ -29,7 +29,15 @@
         </div>
         <div class="movie_contents">
             <div class="reserv_title_back"> </div>
-            <div id = "movie_contents_list"> Text</div>
+            <div class = "movie_contents_box">
+                <ul id="movie_contents_list">
+                    <li>Text - Double click to edit</li>
+                    <li>Text - Double click to edit</li>
+                    <li>Text - Double click to edit</li>
+                    <li>Text - Double click to edit</li>
+                    <li>Text - Double click to edit</li>
+                </ul>
+                </div>
         </div>
       </div>
       <!-- /Movie --> 
