add movie rate img and change list's icon

--- a/reservation.html
+++ b/reservation.html
@@ -31,11 +31,11 @@
             <div class="reserv_title_back"> </div>
             <div class = "movie_contents_box">
                 <ul id="movie_contents_list">
-                    <li>Text - Double click to edit</li>
-                    <li>Text - Double click to edit</li>
-                    <li>Text - Double click to edit</li>
-                    <li>Text - Double click to edit</li>
-                    <li>Text - Double click to edit</li>
+                    <li><img src="img/all.png" class="movie_rate_icon"><span>Text - Double click to edit</span></li>
+                    <li><img src="img/12.png" class="movie_rate_icon"><span>Text - Double click to edit</span></li>
+                    <li><img src="img/12.png" class="movie_rate_icon"><span>Text - Double click to edit</span></li>
+                    <li><img src="img/19.png" class="movie_rate_icon"><span>Text - Double click to edit</span></li>
+                    <li><img src="img/15.png" class="movie_rate_icon"><span>Text - Double click to edit</span></li>
                 </ul>
                 </div>
         </div>
