Theater select box container - html/ss

--- a/reservation.html
+++ b/reservation.html
@@ -22,8 +22,8 @@
 
     <!-- Body -->
     <div class="container">
-      <!-- Movie -->
-      <div class = "movie_container">
+      <!-- Movie Select -->
+      <div class = "movie_select_container">
         <div class ="movie_header">
             <span class="reserv_title">영화</span>
         </div>
@@ -46,6 +46,48 @@
         </div>
       </div>
       <!-- /Movie --> 
+      <div class="movie_info_container">
+        <div class="movie_theater_container">
+          <div class="reserv_title">극장</div>
+          <div class="movie_theater_box">
+              <div class="movie_theater_area_list">
+                  <ul>
+                    <li>서울</li>
+                    <li>경기</li>
+                    <li>인천</li>
+                    <li>강원</li>
+                  </ul>
+
+              </div>
+              <div class="movie_theater_area_detail_list">
+                  <select size="8">
+                    <option>지점 1</option>
+                    <option>지점 1</option>
+                    <option>지점 1</option>
+                    <option>지점 1</option>
+                    <option>지점 1</option>
+                    <option>지점 1</option>
+                    <option>지점 1</option>
+                    <option>지점 1</option>
+                    <option>지점 1</option>
+                    <option>지점 1</option>
+                    <option>지점 1</option>
+                    <option>지점 1</option>
+                    <option>지점 1</option>
+                    <option>지점 1</option>
+                  </select>
+
+
+              </div>
+          </div>
+
+
+        </div>
+
+
+
+
+      </div>
     </div>
     <!-- /Body -->
 
