date container (html/css) and fix flex property

--- a/reservation.html
+++ b/reservation.html
@@ -76,17 +76,30 @@
                     <option>지점 1</option>
                     <option>지점 1</option>
                   </select>
-
-
               </div>
           </div>
 
 
         </div>
 
+        <div class="movie_date_container">
+          <div class="movie_calender_container">
+            <div class="reserv_title">날짜</div>
+            <div class="movie_calender_box">
+            </div>
 
 
+          </div>
+          <div class="movie_time_container">
+            <div class="reserv_title">시간</div>
+            <div class="movie_time_box">
+            </div>
 
+          </div>
+        </div>
+
+
+        
       </div>
     </div>
     <!-- /Body -->
