Dynamically get theater area lists (js)

--- a/reservation.html
+++ b/reservation.html
@@ -52,10 +52,14 @@
           <div class="movie_theater_box">
               <div class="movie_theater_area_list">
                   <ul>
-                    <li>서울</li>
-                    <li>경기</li>
-                    <li>인천</li>
-                    <li>강원</li>
+                    <li id="movie_area_1" class="selected"><a href="#" onclick="return false;"><span class="name"></span></a></li>
+                    <li id="movie_area_2"><a href="#" onclick="return false;"><span class="name"></span></a></li>
+                    <li id="movie_area_3"><a href="#" onclick="return false;"><span class="name"></span></a></li>
+                    <li id="movie_area_2"><a href="#" onclick="return false;"><span class="name"></span></a></li>
+                    <li id="movie_area_3"><a href="#" onclick="return false;"><span class="name"></span></a></li>
+                    <li id="movie_area_2"><a href="#" onclick="return false;"><span class="name"></span></a></li>
+                    <li id="movie_area_3"><a href="#" onclick="return false;"><span class="name"></span></a></li>
+                    <li id="movie_area_3"><a href="#" onclick="return false;"><span class="name"></span></a></li>
                   </ul>
 
               </div>
