--- a/reservation.html
+++ b/reservation.html
@@ -42,14 +42,14 @@
           <div class="movie_theater_box">
               <div class="movie_theater_area_list">
                   <ul>
-                    <li id="movie_area_1" class="selected"><a href="#" onclick="return false;"><span class="name"></span></a></li>
-                    <li id="movie_area_2"><a href="#" onclick="return false;"><span class="name"></span></a></li>
-                    <li id="movie_area_3"><a href="#" onclick="return false;"><span class="name"></span></a></li>
-                    <li id="movie_area_2"><a href="#" onclick="return false;"><span class="name"></span></a></li>
-                    <li id="movie_area_3"><a href="#" onclick="return false;"><span class="name"></span></a></li>
-                    <li id="movie_area_2"><a href="#" onclick="return false;"><span class="name"></span></a></li>
-                    <li id="movie_area_3"><a href="#" onclick="return false;"><span class="name"></span></a></li>
-                    <li id="movie_area_3"><a href="#" onclick="return false;"><span class="name"></span></a></li>
+                    <li><a href="#" id="movie_area_1" onclick="return false;"><span class="name"></span></a></li>
+                    <li><a href="#" id="movie_area_2" onclick="return false;"><span class="name"></span></a></li>
+                    <li><a href="#" id="movie_area_3" onclick="return false;"><span class="name"></span></a></li>
+                    <li><a href="#" id="movie_area_4" onclick="return false;"><span class="name"></span></a></li>
+                    <li><a href="#" id="movie_area_5" onclick="return false;"><span class="name"></span></a></li>
+                    <li><a href="#" id="movie_area_6" onclick="return false;"><span class="name"></span></a></li>
+                    <li><a href="#" id="movie_area_7" onclick="return false;"><span class="name"></span></a></li>
+                    <li><a href="#" id="movie_area_8" onclick="return false;"><span class="name"></span></a></li>
                   </ul>
 
               </div>
