select box dynamically addition when click the movie area

--- a/reservation.html
+++ b/reservation.html
@@ -54,21 +54,10 @@
 
               </div>
               <div class="movie_theater_area_detail_list">
-                  <select size="8">
-                    <option>지점 1</option>
-                    <option>지점 1</option>
-                    <option>지점 1</option>
-                    <option>지점 1</option>
-                    <option>지점 1</option>
-                    <option>지점 1</option>
-                    <option>지점 1</option>
-                    <option>지점 1</option>
-                    <option>지점 1</option>
-                    <option>지점 1</option>
-                    <option>지점 1</option>
-                    <option>지점 1</option>
-                    <option>지점 1</option>
-                    <option>지점 1</option>
+                  <select size="8" onchange="SelectTheaterDetail(this);">
+                    <option></option>
+                    <option></option>
+                    <option></option>
                   </select>
               </div>
           </div>
