activate only available date

--- a/Calender.html
+++ b/Calender.html
@@ -11,6 +11,23 @@
         text-align:center;
         width:30%;
     }
+    a{
+        text-decoration: none;
+        display: block;
+        background-color: rgb(221, 148, 148);
+    }
+
+    
+   
+    a.disabled 
+    {
+    text-decoration: none;
+    pointer-events: none;
+    cursor: default;
+    background-color: white;
+    color:gray;
+    }
+
 </style>
  
 </head>
