Time box - html/css

--- a/reservation.html
+++ b/reservation.html
@@ -101,6 +101,47 @@
           <div class="movie_time_container">
             <div class="reserv_title">시간</div>
             <div class="movie_time_box">
+              <div class="movie_time_div">
+                <button>12:00</button>
+                <span class="seats_num">34석</span>
+              </div>
+              <div class="movie_time_div">
+                <button>12:00</button>
+                <span class="seats_num">34석</span>
+              </div>
+              <div class="movie_time_div">
+                <button>12:00</button>
+                <span class="seats_num">34석</span>
+              </div>
+              <div class="movie_time_div">
+                <button>12:00</button>
+                <span class="seats_num">34석</span>
+              </div>
+              <div class="movie_time_div">
+                <button>12:00</button>
+                <span class="seats_num">34석</span>
+              </div>
+              <div class="movie_time_div">
+                <button>12:00</button>
+                <span class="seats_num">34석</span>
+              </div>
+              <div class="movie_time_div">
+                <button>12:00</button>
+                <span class="seats_num">34석</span>
+              </div>
+              <div class="movie_time_div">
+                <button>12: 00</button>
+                <span class="seats_num">34석</span>
+              </div>
+              <div class="movie_time_div">
+                <button>12:00</button>
+                <span class="seats_num">34석</span>
+              </div>
+              <div class="movie_time_div">
+                <button>12:00</button>
+                <span class="seats_num">34석</span>
+              </div>
+
             </div>
 
           </div>
@@ -109,8 +150,7 @@
 
         
       </div>
-
-      <button onclick="temp_check()"> Check</button>>
+      <button class="submit" onclick="temp_check()"> Check</button>    
     </div>
     <!-- /Body -->
 
