modal css - seat selection modal content

--- a/reservation.html
+++ b/reservation.html
@@ -112,25 +112,25 @@
 
      <!-- The Modal -->
      <div id="myModal" class="modal">
-  
+
        <!-- Modal content -->
        <div class="modal-content">
          <span class="close">&times;</span>
          <div class="seats_movie_title">
-            <span>Movie:</span> 
+            <span>Movie  :  </span> 
             <span id="movie_title">Avengers: Endgame</span>
          </div>
          <div class="seats_person">
-           <div>
+           <div class="sets_person_box">
               <span>Children</span>
               <button class="minus_button"> - </button>
-              <span class="children personnel"> 0 </span>
+              <div class="children personnel"> 0 </div>
               <button class="plus_button"> + </button>
            </div>
-           <div>
+           <div class="sets_person_box">
               <span>Adult</span>
               <button class="minus_button"> - </button>
-              <span class="adult personnel"> 0 </span>
+              <div class="adult personnel"> 0 </div>
               <button class="plus_button"> + </button>
           </div>
          </div>
@@ -138,10 +138,10 @@
 
          </div>
          <div class="fee">
-              <p>You have selected <span id="seats_num">0</span>seats - Price : <span id="price">0</span> </p>
+              <p>You have selected <span id="seats_num">0</span> seats - price : <span id="price">0</span> </p>
          </div>
          
-         <button> Select </button>
+         <button class="modal_select_button"> Select </button>
 
 
        </div>
