--- a/signup.html
+++ b/signup.html
@@ -1,1 +1,54 @@
-Sign up page
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Movie Reservation-Login</title>
+  <link rel="stylesheet" href="index.css">
+  <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
+  <meta charset="utf-8" />
+</head>
+<body>
+
+    <!-- Header -->
+    <div class="header">
+      <!-- 서비스 메뉴 -->
+      <div class="header_menu">
+        <h1>T I C K E T</h1>
+
+      </div>
+      <!-- /서비스 메뉴 -->
+    </div>
+    <!-- /Header -->
+
+
+    <!-- Body -->
+    <div class="container">
+      <div class="login">
+        <form method="POST" action = "#">
+          <div>
+            <label for="login_id" class="login_label"> <span>ID</span> </label>
+            <input type="text" name="login_id" id="login_id" required />
+          </div>
+          <div>
+            <label for="login_name" class="login_label"> Name </label>
+            <input type="text" name="login_name" id="login_name" required />
+          </div>
+          <div>
+            <label for="login_address" class="login_label"> Address </label>
+            <input type="text" name="login_address" id="login_address" required />
+          </div>
+          <div>
+            <label for="login_email" class="login_label"> E-mail </label>
+            <input type="email" name="login_email" id="login_email" required />
+          </div>
+          <div>
+          <button type="submit">회원가입</button>
+        </div>
+        </form>
+      </div>   
+      <!-- /Login --> 
+    </div>
+    <!-- /Body -->
+
+  
+</body>
+</html>
