Add back button

--- a/signup.html
+++ b/signup.html
@@ -22,6 +22,9 @@
 
     <!-- Body -->
     <div class="container">
+      <button id="back_button" onclick="history.back();"> <i class="far fa-arrow-alt-circle-left"></i></button>
+
+
       <div class="login">
         <form method="POST" action = "#">
           <div>
