adjust css layout in signup page

--- a/signup.html
+++ b/signup.html
@@ -25,23 +25,23 @@
       <button id="back_button" onclick="history.back();"> <i class="far fa-arrow-alt-circle-left"></i></button>
 
 
-      <div class="login">
+      <div class="signup">
         <form method="POST" action = "#">
           <div>
-            <label for="login_id" class="login_label"> <span>ID</span> </label>
-            <input type="text" name="login_id" id="login_id" required />
+            <label for="signup_id" class="signup_label"> <span>ID</span> </label>
+            <input type="text" name="signup_id" id="signup_id" required />
           </div>
           <div>
-            <label for="login_name" class="login_label"> Name </label>
-            <input type="text" name="login_name" id="login_name" required />
+            <label for="signup_name" class="signup_label"> Name </label>
+            <input type="text" name="signup_name" id="signup_name" required />
           </div>
           <div>
-            <label for="login_address" class="login_label"> Address </label>
-            <input type="text" name="login_address" id="login_address" required />
+            <label for="signup_address" class="signup_label"> Address </label>
+            <input type="text" name="signup_address" id="signup_address" required />
           </div>
           <div>
-            <label for="login_email" class="login_label"> E-mail </label>
-            <input type="email" name="login_email" id="login_email" required />
+            <label for="signup_email" class="signup_label"> E-mail </label>
+            <input type="email" name="signup_email" id="signup_email" required />
           </div>
           <div>
           <button type="submit">회원가입</button>
