add signup items

--- a/signup.html
+++ b/signup.html
@@ -32,12 +32,16 @@
             <input type="text" name="signup_id" id="signup_id" required />
           </div>
           <div>
+            <label for="signup_pw" class="signup_label"> <span>Password</span> </label>
+            <input type="text" name="signup_pw" id="signup_pw" required />
+          </div>
+          <div>
             <label for="signup_name" class="signup_label"> Name </label>
             <input type="text" name="signup_name" id="signup_name" required />
           </div>
           <div>
-            <label for="signup_address" class="signup_label"> Address </label>
-            <input type="text" name="signup_address" id="signup_address" required />
+            <label for="signup_country" class="signup_label"> Country </label>
+            <input type="text" name="signup_country" id="signup_country" required />
           </div>
           <div>
             <label for="signup_email" class="signup_label"> E-mail </label>
