modal child and adult button listner

--- a/reservation.html
+++ b/reservation.html
@@ -123,15 +123,15 @@
          <div class="seats_person">
            <div class="sets_person_box">
               <span>Children</span>
-              <button class="minus_button"> - </button>
+              <button class="children minus_button"> - </button>
               <div class="children personnel"> 0 </div>
-              <button class="plus_button"> + </button>
+              <button class="children plus_button"> + </button>
            </div>
            <div class="sets_person_box">
               <span>Adult</span>
-              <button class="minus_button"> - </button>
+              <button class="adult minus_button"> - </button>
               <div class="adult personnel"> 0 </div>
-              <button class="plus_button"> + </button>
+              <button class="adult plus_button"> + </button>
           </div>
          </div>
          <div class="seats_box">
