Add movie reservation information

--- a/reservation.html
+++ b/reservation.html
@@ -95,8 +95,6 @@
                 </table>
               </div>         
             </div>
-
-
           </div>
           <div class="movie_time_container">
             <div class="reserv_title">시간</div>
@@ -106,6 +104,17 @@
         </div>        
       </div>
 
+
+      
+      <div class="movie_reserv_info_box">
+        <div class="movie_reserv_info">
+          <div class="reserv_info" id="selectedMovie"> <span>나미와 잡화점의 기적</span> </div>
+          <div class="reserv_info" id="selectedTheater"> <span>강남</span> </div>
+          <div class="reserv_info" id="selectedDate"> <span>20200629</span> </div>
+          <div class="reserv_info" id="selectedTime"> <span>12:00</span> </div>
+          <div class="reserv_info" id="selectedSeats"> <span>1A 3A</span> </div>
+        </div>
+      </div>
  
       <button class="submit" onclick="temp_check()"> Check</button>    
     </div>
