movie title information changing

--- a/reservation.html
+++ b/reservation.html
@@ -108,11 +108,11 @@
       
       <div class="movie_reserv_info_box">
         <div class="movie_reserv_info">
-          <div class="reserv_info" id="selectedMovie"> <span>나미와 잡화점의 기적</span> </div>
-          <div class="reserv_info" id="selectedTheater"> <span>강남</span> </div>
-          <div class="reserv_info" id="selectedDate"> <span>20200629</span> </div>
-          <div class="reserv_info" id="selectedTime"> <span>12:00</span> </div>
-          <div class="reserv_info" id="selectedSeats"> <span>1A 3A</span> </div>
+          <div class="reserv_info" id="selectedMovie"> <span>영화를 선택해주세요</span> </div>
+          <div class="reserv_info" id="selectedTheater"> <span>-</span> </div>
+          <div class="reserv_info" id="selectedDate"> <span>-</span> </div>
+          <div class="reserv_info" id="selectedTime"> <span>-</span> </div>
+          <div class="reserv_info" id="selectedSeats"> <span>-</span> </div>
         </div>
       </div>
  
