reservation status - theater, date, time

--- a/reservation.html
+++ b/reservation.html
@@ -109,10 +109,10 @@
       <div class="movie_reserv_info_box">
         <div class="movie_reserv_info">
           <div class="reserv_info" id="selectedMovie"> <span>영화를 선택해주세요</span> </div>
-          <div class="reserv_info" id="selectedTheater"> <span>-</span> </div>
-          <div class="reserv_info" id="selectedDate"> <span>-</span> </div>
-          <div class="reserv_info" id="selectedTime"> <span>-</span> </div>
-          <div class="reserv_info" id="selectedSeats"> <span>-</span> </div>
+          <div class="reserv_info" id="selectedTheater"> <span>-영화관-</span> </div>
+          <div class="reserv_info" id="selectedDate"> <span>-날짜-</span> </div>
+          <div class="reserv_info" id="selectedTime"> <span>-시간-</span> </div>
+          <div class="reserv_info" id="selectedSeats"> <span>-좌석-</span> </div>
         </div>
       </div>
  
